--- a/docker/intro/docker-compose.yml
+++ b/docker/intro/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: mauriceanthony-httpd
     restart: always # démarre ou non automatiquement le container au démarrage de docker
     volumes:
-      - './:/usr/local/apache2/htdocs' # lien entre le chemin relatif et le chemin du serveur apache
+      - './www/:/usr/local/apache2/htdocs' # lien entre le chemin relatif et le chemin du serveur apache
     ports: 
       - '3000:80' # lien entre le port "3000" et le port utilisé par le protocole http (80)
       
