--- a/Frontend/tp-vignoble/docker-compose.yml
+++ b/Frontend/tp-vignoble/docker-compose.yml
@@ -1,8 +1,8 @@
-name: mauriceanthony-apache
+name: amaurice-ex-vignoble
 services:
   apache:
     image: httpd
-    container_name: mauriceanthony-httpd
+    container_name: amaurice-vignoble
     restart: "no" # démarre ou non automatiquement le container au démarrage de docker
     volumes:
       - './www/:/usr/local/apache2/htdocs' # lien entre le chemin relatif et le chemin du serveur apache
