Feat: Did the previous version, without exceptions

--- a/Exercices/Ex_Bouteille/Ex_Bouteille/Ex_Bouteille.csproj
+++ b/Exercices/Ex_Bouteille/Ex_Bouteille/Ex_Bouteille.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ClassLibraryBouteille2\ClassLibraryBouteille2.csproj" />
     <ProjectReference Include="..\ClassLibraryBouteille\ClassLibraryBouteille.csproj" />
   </ItemGroup>
 
