--- a/Exercices/ConsoleLepidoptere/ConsoleLepidoptere/ConsoleLepidoptere.csproj
+++ b/Exercices/ConsoleLepidoptere/ConsoleLepidoptere/ConsoleLepidoptere.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lepidoptere\Lepidoptere.csproj" />
+  </ItemGroup>
+
 </Project>
