--- a/Exercices/ConsoleLepidoptere/ConsoleLepidoptere/ConsoleLepidoptere.csproj
+++ b/Exercices/ConsoleLepidoptere/ConsoleLepidoptere/ConsoleLepidoptere.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lepidoptere\Lepidoptere.csproj" />
+    <ProjectReference Include="..\Lepidoptere\ClassLepidoptere.csproj" />
   </ItemGroup>
 
 </Project>
