--- a/ExercicesWF/WFExercices/ExInputControl/ExInputControl.csproj
+++ b/ExercicesWF/WFExercices/ExInputControl/ExInputControl.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Input Control.cs">
+    <Compile Include="InputControl.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Input Control.Designer.cs">
-      <DependentUpon>Input Control.cs</DependentUpon>
+    <Compile Include="InputControl.Designer.cs">
+      <DependentUpon>InputControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Input Control.resx">
-      <DependentUpon>Input Control.cs</DependentUpon>
+    <EmbeddedResource Include="InputControl.resx">
+      <DependentUpon>InputControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -78,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClassWinForm\ClassWinForm.csproj">
+      <Project>{ffba7cd7-f996-4c2e-9a61-58f3d603d2da}</Project>
+      <Name>ClassWinForm</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
