update winforms control

--- a/ExercicesWF/WFExercices/ClassWinForm/ClassWinForm.csproj
+++ b/ExercicesWF/WFExercices/ClassWinForm/ClassWinForm.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassErrors.cs" />
+    <Compile Include="FormControls.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
