--- a/ExercicesWF/WFExercices/FormComboBox/FormComboBox.csproj
+++ b/ExercicesWF/WFExercices/FormComboBox/FormComboBox.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClassWinForm\ClassWinForm.csproj">
+      <Project>{FFBA7CD7-F996-4C2E-9A61-58F3D603D2DA}</Project>
+      <Name>ClassWinForm</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
