--- a/ExercicesWF/WFExercices/ClassLibrary2/ClassLibrary2.csproj
+++ b/ExercicesWF/WFExercices/ClassLibrary2/ClassLibrary2.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassWinForm\ClassWinForm.csproj" />
+  </ItemGroup>
+
 </Project>
