--- a/ExercicesWF/WFExercices/ExLoan/ExLoan.csproj
+++ b/ExercicesWF/WFExercices/ExLoan/ExLoan.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary2\ClassLibrary2.csproj" />
     <ProjectReference Include="..\ClassWinForm\ClassWinForm.csproj" />
+    <ProjectReference Include="..\WFControls\WFControls.csproj" />
   </ItemGroup>
 
 </Project>
