update: ex menu, still have to finish closing forms

--- a/ExercicesWF/WFExercices/ClassWinForm/ClassWinForm.csproj
+++ b/ExercicesWF/WFExercices/ClassWinForm/ClassWinForm.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateController.cs" />
     <Compile Include="FormControls.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
