--- a/ExercicesWF/WFExercices/WinFormsMenu/WinFormsMenu.csproj
+++ b/ExercicesWF/WFExercices/WinFormsMenu/WinFormsMenu.csproj
@@ -8,4 +8,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExAdditionneur\ExAdditionneur.csproj" />
+    <ProjectReference Include="..\ExCheckRadio\ExCheckRadio.csproj" />
+    <ProjectReference Include="..\ExInputControl\ExInputControl.csproj" />
+    <ProjectReference Include="..\ExLoan\ExLoan.csproj" />
+    <ProjectReference Include="..\FormComboBoxSecond\FormComboBoxSecond.csproj" />
+    <ProjectReference Include="..\FormComboBox\FormComboBox.csproj" />
+    <ProjectReference Include="..\FormList\FormList.csproj" />
+    <ProjectReference Include="..\FormRange\FormRange.csproj" />
+    <ProjectReference Include="..\WFControls\WFControls.csproj" />
+    <ProjectReference Include="..\WFHelloWorld\WFHelloWorld.csproj" />
+  </ItemGroup>
+
 </Project>
