--- a/WPF/ExWPF/ExWPF/ExWPF.csproj
+++ b/WPF/ExWPF/ExWPF/ExWPF.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WpfClassLibrary\WpfClassLibrary.csproj" />
   </ItemGroup>
 
